# edge_release

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
