[package]
name = "edge_release"
version = "0.1.0"
edition = "2021"

# cargo-features = ["strip"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="0.4.26"
reqwest = { version = "0.11.18", features = ["blocking"] }
regex="1.8.3"
